[gd_scene load_steps=16 format=3 uid="uid://bpl8o5wof2i0i"]

[ext_resource type="Script" path="res://enemies/boss_enemy.gd" id="1_3lger"]
[ext_resource type="Texture2D" uid="uid://cb014twvmikp1" path="res://enemies/boss_enemy_body.png" id="2_btovj"]
[ext_resource type="PackedScene" uid="uid://c1br858hwlc05" path="res://enemies/enemy.tscn" id="2_g3thj"]
[ext_resource type="Texture2D" uid="uid://c6aovodkudm2l" path="res://enemies/boss_enemy_wing.png" id="3_gevtm"]
[ext_resource type="Texture2D" uid="uid://c8h6fycojdh2o" path="res://enemies/boss_enemy_head.png" id="4_ykqbm"]
[ext_resource type="Texture2D" uid="uid://ci8ghf6ncfqeb" path="res://enemies/boss_enemy_leg.png" id="5_yow68"]
[ext_resource type="PackedScene" uid="uid://vc3sirmfvbpe" path="res://enemies/stats.tscn" id="6_536o4"]
[ext_resource type="PackedScene" uid="uid://5uy3efkbsge6" path="res://collisions/hurtbox.tscn" id="7_mke8w"]
[ext_resource type="PackedScene" uid="uid://dsyg0t3624o83" path="res://collisions/hitbox.tscn" id="8_aigsl"]
[ext_resource type="PackedScene" uid="uid://bwdq65xhu11si" path="res://enemies/enemy_health_bar.tscn" id="9_y7hm0"]

[sub_resource type="Animation" id="Animation_l4fwq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, 13)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/LeftWing:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.785398]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/RightWing:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785398]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/UpperLeftLeg:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LowerLeftLeg:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.523599]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/UpperLeftLeg2:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/LowerLeftLeg2:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.523599]
}

[sub_resource type="Animation" id="Animation_ff7qi"]
resource_name = "fly"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-0.5, 13), Vector2(-0.5, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/LeftWing:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.785398, -1.309]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/RightWing:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.785398, 1.309]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/UpperLeftLeg:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.523599]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LowerLeftLeg:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.523599, -0.261799]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/UpperLeftLeg2:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.523599]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/LowerLeftLeg2:rotation")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.523599, 0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n44ek"]
_data = {
"RESET": SubResource("Animation_l4fwq"),
"fly": SubResource("Animation_ff7qi")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_kuxx5"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_77dqq"]
radius = 34.0

[node name="BossEnemy" type="Node2D"]
script = ExtResource("1_3lger")

[node name="Enemy" parent="." instance=ExtResource("2_g3thj")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n44ek")
}
autoplay = "fly"

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(-0.5, 13)
texture = ExtResource("2_btovj")

[node name="LeftWing" type="Sprite2D" parent="Body"]
show_behind_parent = true
position = Vector2(-16, -40)
rotation = 0.785398
texture = ExtResource("3_gevtm")
offset = Vector2(-42, -8)

[node name="RightWing" type="Sprite2D" parent="Body"]
show_behind_parent = true
position = Vector2(18, -40)
rotation = -0.785398
texture = ExtResource("3_gevtm")
offset = Vector2(42, -8)
flip_h = true

[node name="Head" type="Sprite2D" parent="Body"]
position = Vector2(1, -14)
texture = ExtResource("4_ykqbm")

[node name="UpperLeftLeg" type="Sprite2D" parent="Body"]
position = Vector2(-23, -24)
texture = ExtResource("5_yow68")
offset = Vector2(-16, 16)

[node name="LowerLeftLeg" type="Sprite2D" parent="Body"]
position = Vector2(-20, -4)
rotation = -0.523599
texture = ExtResource("5_yow68")
offset = Vector2(-16, 16)

[node name="UpperLeftLeg2" type="Sprite2D" parent="Body"]
position = Vector2(25, -24)
texture = ExtResource("5_yow68")
offset = Vector2(16, 16)
flip_h = true

[node name="LowerLeftLeg2" type="Sprite2D" parent="Body"]
position = Vector2(21, -4)
rotation = 0.523599
texture = ExtResource("5_yow68")
offset = Vector2(16, 16)
flip_h = true

[node name="Stats" parent="." instance=ExtResource("6_536o4")]
max_health = 20

[node name="Hurtbox" parent="." instance=ExtResource("7_mke8w")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_kuxx5")

[node name="Hitbox" parent="." instance=ExtResource("8_aigsl")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_77dqq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(-16, 32, -16, 44, -2, 68, 2, 68, 16, 44, 16, 32)

[node name="FirerateTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="StateTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="StingerPivot" type="Marker2D" parent="."]
position = Vector2(0, 14)

[node name="Muzzle" type="Marker2D" parent="StingerPivot"]
position = Vector2(28, 0)

[node name="EnemyHealthBar" parent="." instance=ExtResource("9_y7hm0")]
offset_left = -105.0
offset_top = -128.0
offset_right = 105.0
offset_bottom = -116.0

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
